# emuwork

./: .gitattributes  .gitignore  .project  .stylish-haskell.yaml  README.md  cabal.project  emuwork.cabal  emuwork.sublime-project  guidance.yaml  hie.yaml  sandbox.sh  stack-ghc-8.0.2.yaml  stack.yaml
scripts/: trs80-l2-dis
src/: .ghci  Machine.hs  Main.hs  Reader.hs  Z80.hs  emubase.cabal
src-edas/: EDAS.hs  MisosysEDAS.hs  edas.cabal
src-edas/MisosysEDAS/: .ghci  AsmPrettyPrinter.hs  Assembler.hs  ExprParser.hs  MnemonicParser.hs  Parser.hs  ParserUtils.hs  PseudoOpParser.hs  Types.hs
src-edas/MisosysEDAS/Tests/: .ghci  Harness.hs  PrettyPrint.hs
src-emubase/: .ghci  Machine.hs  Reader.hs  Z80.hs  emubase.cabal
src-emubase/Experiments/: deviceio.hs  typefam.hs
src-emubase/Machine/: Device.hs  DisassemblerTypes.hs  EmulatedSystem.hs  EmulatorDriver.hs  MachineRAM.hs  MemorySystem.hs  NullProcessor.hs  ProgramCounter.hs  System.hs  Types.hs  Utils.hs
src-emubase/Machine/Tests/: MsysTests.hs  TestDevice.hs
src-emubase/Reader/: .ghci  ErrorHandling.hs  IntelHex.hs  RawFormat.hs
src-emubase/TIExplorer/: Explorer.hs
src-emubase/Z80/: .ghci  DisasmOutput.hs  Disassembler.hs  InsnDecode.hs  InstructionSet.hs  Processor.hs  System.hs
src-emubase/Z80/Tests/: Z80InstTest.hs
src-main/: .ghci  Main.hs  TRS80Disasm.hs  TRS80Sim.hs  emuwork.cabal
src-trs80/: TRS80.hs  trs80.cabal  trs80.cabal-notused
src-trs80/TRS80/: CmdDriver.hs  CommonOptions.hs  Disasm.hs  Memory.hs  System.hs  Types.hs
src-trs80/TRS80/Disasm/: Guidance.hs  KnownSymbols.hs  YamlTest.hs
src-trs80/TRS80/Executables/: DisasmCheck.hs
src-trs80l2rom/: .ghci  .ghci-old  Guidance.hs  KnownSymbols.hs  RomDisassembly.hs  trs80l2rom.cabal
src-trs80l2rom/Disasm/: Guidance.hs  KnownSymbols.hs  YamlTest.hs  tweak.hs
src-z80/: Z80.hs  z80.cabal  z80_reference.txt
src-z80/Z80/: DisasmOutput.hs  Disassembler.hs  InsnDecode.hs  InsnExecute.hs  InsnText.hs  InstructionSet.hs  ParseAnalytic.hs  Processor.hs  System.hs
src-z80/Z80/Execute/: ALUops.hs  IncDec.hs  LoadStore.hs  Utils.hs
src-z80/Z80/Experiments/: ioidentity.hs  old-InsnDecode.hs  opdecode.hs  uniplating.hs
src-z80/Z80/Tests/: InstData.hs  Z80Execute.hs  Z80InstTest.hs
src-z80/Z80/Tests/Execute/: ALUops.hs  IncDec.hs  LoadStore.hs  QuickInstances.hs  TestData.hs  Utils.hs
src-zilog-emu/: Z80.hs  zilog-emu.cabal
src-zilog-emu/Z80/: DisasmOutput.hs  Disassembler.hs  InsnDecode.hs  InstructionSet.hs  ParseAnalytic.hs  Processor.hs
src-zilog-emu/Z80/MisosysEDAS/: MnemonicParser.hs
src-zilog-emu/Z80/MisosysEDAS/Tests/: .ghci
src/Machine/: .ghci  CmdEnvironment.hs  DisassemblerTypes.hs  EmulatedProcessor.hs  EmulatedSystem.hs  EmulatorDriver.hs  Environment.hs  NullProcessor.hs  Utils.hs
src/Reader/: IntelHex.hs  RawFormat.hs
src/Z80/: .ghci  CmdDispatch.hs  DisasmOutput.hs  Disassembler.hs  InsnDecode.hs  InstructionSet.hs  MisosysEDAS.hs  Processor.hs
src/Z80/MisosysEDAS/: .ghci  AsmPrettyPrinter.hs  Assembler.hs  ExprParser.hs  MnemonicParser.hs  Parser.hs  ParserUtils.hs  PseudoOpParser.hs  Types.hs
src/Z80/MisosysEDAS/Tests/: Harness.hs  PrettyPrint.hs
trs80/: z80numeric.txt
trs80/edas/: README  export.z80  fakerom.z80  import.z80  settime.z80  xtrs8.z80  xtrshard.z80  xtrsmous.z80  xtrsrom4p.z80
trs80/roms/: .gitattributes  level2-guidance.yaml  model3.rom
