cabal-version:  >= 1.12
name:           emuwork
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       A prototype processor emulation framework

description:    Yet another processor emulation framework for my
                favorite old processors.
license:        GPL-3

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:      
                        base >= 4,
                        primitive,
                        filepath,
                        directory,
                        deepseq,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        vector >= 0.10,
                        lens,
                        transformers,
                        syb,
                        parsec >= 3
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances
  exposed-modules:      Machine,
                        Reader,
                        Z80,
                        TIExplorer.Explorer
  -- Throw in the kitchen sink here so that the library actually links:
  other-modules:        Machine.DisassemblerTypes,
                        Machine.EmulatedSystem,
                        Machine.NullProcessor,
                        Machine.Utils,
                        Reader.RawFormat,
                        Reader.IntelHex,
                        Reader.ErrorHandling,
                        Z80.InstructionSet,
                        Z80.InsnDecode,
                        Z80.Processor,
                        Z80.Disassembler,
                        Z80.DisasmOutput,
                        Z80.ParseAnalytic,
                        Z80.MisosysEDAS

executable emuwork
  default-language:     Haskell2010
  hs-source-dirs:       src-main
  main-is:              Main.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        deepseq,
                        lens,
                        vector >= 0.10,
                        emuwork
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances

executable trs80l2rom
  default-language:     Haskell2010
  hs-source-dirs:       src-trs80l2rom
  Main-Is:              RomDisassembly.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        binary >= 0.5,
                        lens,
                        vector >= 0.10,
                        deepseq,
                        pureMD5,
                        emuwork
  ghc-options:          -Wall -O2
  other-modules:        Guidance,
                        KnownSymbols
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances

executable edas
  default-language:     Haskell2010
  hs-source-dirs:       src-edas
  Main-Is:              EDAS.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        binary >= 0.5,
                        lens,
                        vector >= 0.10,
                        deepseq,
                        emuwork
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances
