cabal-version:  >= 1.12
name:           emuwork
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       A prototype processor emulation framework

description:    Yet another processor emulation framework for my
                favorite old processors.
license:        GPL-3

executable emuwork
  default-language:     Haskell2010
  hs-source-dirs:       src-main
  main-is:              Main.hs
  Build-Depends:
    base,
    containers,
    bytestring,
    deepseq,
    lens,
    vector,
    trs80,
    emubase
  ghc-options:          -Wall -O2
  default-extensions:
    GADTs,
    MultiParamTypeClasses,
    OverloadedStrings,
    TemplateHaskell,
    TypeSynonymInstances,
    FlexibleInstances
