cabal-version:  >= 1.12
name:           edas
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       A prototype processor emulation framework

description:    Yet another processor emulation framework for my
                favorite old processors.
license:        GPL-3

executable edas
  default-language:     Haskell2010
  enable-dynamic:       True
  hs-source-dirs:       src-edas
  Main-Is:              EDAS.hs
  Build-Depends:        base,
                        containers,
                        bytestring,
                        text,
                        binary,
                        lens,
                        vector,
                        deepseq,
                        trs80,
                        emubase
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances
  other-modules:
    Z80.MisosysEDAS.Types,
    Z80.MisosysEDAS.AsmPrettyPrinter,
    Z80.MisosysEDAS.ParserUtils,
    Z80.MisosysEDAS.Assembler,
    Z80.MisosysEDAS.PseudoOpParser,
    Z80.MisosysEDAS.MnemonicParser,
    Z80.MisosysEDAS.ExprParser,
    Z80.MisosysEDAS.Parser

executable edas-tests
  default-language:     Haskell2010
  hs-source-dirs:       Z80/MisosysEDAS/Tests
  Main-Is:              Harness.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        binary >= 0.5,
                        lens,
                        vector >= 0.10,
                        deepseq,
                        transformers,
                        parsec,
                        HUnit,
                        emubase
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances

executable edas-pptest
  default-language:     Haskell2010
  hs-source-dirs:       Z80/MisosysEDAS/Tests
  Main-Is:              PrettyPrint.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        binary >= 0.5,
                        lens,
                        vector >= 0.10,
                        deepseq,
                        transformers,
                        parsec,
                        emubase
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances
