cabal-version:  >= 1.12
name:           emubase
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       A processor emulation framework

description:    An processor emulation framework
license:        GPL-3

library
  default-language:     Haskell2010

  build-depends:
    base,
    comonad,
    time,
    primitive,
    filepath,
    directory,
    deepseq,
    containers,
    unordered-containers,
    bytestring,
    text,
    vector,
    mtl >= 2,
    psqueues,
    hashable,
    old-locale,
    comonad,
    IntervalMap,
    lens,
    mtl,
    syb,
    parsec

  ghc-options: -Wall -O2

  default-extensions:
    GADTs,
    MultiParamTypeClasses,
    TypeSynonymInstances,
    RankNTypes,
    OverloadedStrings,
    BangPatterns,
    TemplateHaskell

  exposed-modules:
    Machine,
    Reader,
    Z80,

    Machine.Device,
    Machine.DisassemblerTypes,
    Machine.EmulatedSystem,
    Machine.MemorySystem,
    Machine.ProgramCounter
    Machine.NullProcessor,
    Machine.Utils,

    Reader.RawFormat,
    Reader.IntelHex,
    Reader.ErrorHandling,

    Z80.InstructionSet,
    Z80.InsnDecode,
    Z80.Processor,
    Z80.Disassembler,
    Z80.DisasmOutput,
    Z80.ParseAnalytic

test-suite msystest
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Machine/Tests/MsysTests.hs
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N4
    build-depends:
      base,
      Cabal,
      comonad,
      HUnit >= 1.2,
      QuickCheck >= 2,
      test-framework >= 0.8,
      test-framework-hunit >= 0.3,
      test-framework-quickcheck2 >= 0.3,
      mtl,
      lens,
      IntervalMap,
      unordered-containers,
      bytestring,
      text,
      mtl >= 2,
      vector,
      psqueues,
      random
    default-extensions:
      GADTs,
      MultiParamTypeClasses,
      OverloadedStrings,
      BangPatterns,
      TemplateHaskell
    other-modules:
      Machine.Device,
      Machine.MemorySystem,
      Machine.ProgramCounter,
      Machine.Utils,
      Machine.Tests.TestDevice
