cabal-version:  3.6
name:           emubase
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       A processor emulation framework

description:    An processor emulation framework
license:        GPL-3.0-or-later

library
  default-language:     Haskell2010

  build-depends:
    base,
    IntervalMap,
    bytestring,
    comonad,
    containers,
    deepseq,
    directory,
    filepath,
    fused-effects,
    hashable,
    microlens-platform,
    transformers,
    old-locale,
    parsec,
    primitive,
    psqueues,
    syb,
    text,
    time,
    uniplate,
    unordered-containers,
    vector

  -- cpp-options: -DTEST_DEBUG
  ghc-options: -Wall -O2

  default-extensions:
    CPP,
    BangPatterns,
    BinaryLiterals,
    ConstraintKinds,
    DataKinds,
    DefaultSignatures,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DoAndIfThenElse,
    EmptyDataDecls,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    GeneralizedNewtypeDeriving,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    OverloadedStrings,
    PartialTypeSignatures,
    PatternGuards,
    PolyKinds,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TupleSections,
    TypeSynonymInstances,
    ViewPatterns

  exposed-modules:
      Machine
    , Reader

    , Machine.Device
    -- , Machine.DisassemblerTypes
    , Machine.MemorySystem
    -- , Machine.ProgramCounter
    -- , Machine.NullProcessor
    -- , Machine.System
    , Machine.Utils

    , Reader.RawFormat
    , Reader.IntelHex
    , Reader.ErrorHandling

test-suite msystest
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Machine/Tests/MsysTests.hs
    -- cpp-options:        -DTEST_DEBUG
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N4
    build-depends:
      base,
      random,
      Cabal,
      HUnit >= 1.2,
      QuickCheck >= 2,
      test-framework >= 0.8,
      test-framework-hunit >= 0.3,
      test-framework-quickcheck2 >= 0.3,
      IntervalMap,
      bytestring,
      comonad,
      containers,
      deepseq,
      directory,
      filepath,
      generics-sop,
      hashable,
      microlens-platform,
      transformers,
      old-locale,
      parsec,
      primitive,
      psqueues,
      syb,
      text,
      time,
      uniplate,
      unordered-containers,
      vector
    default-extensions:
      CPP,
      GADTs,
      MultiParamTypeClasses,
      TypeSynonymInstances,
      RankNTypes,
      OverloadedStrings,
      BangPatterns,
    other-modules:
      Machine.Device,
      Machine.MemorySystem,
      Machine.ProgramCounter,
      Machine.System,
      Machine.Utils,
      Machine.Tests.TestDevice
