cabal-version:  3.6
name:           emuwork
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       A prototype processor emulation framework

description:    Yet another processor emulation framework for my
                favorite old processors.
license:        GPL-3.0-or-later

executable trs80
  default-language: Haskell2010
  main-is: TRS80Sim.hs
  build-depends:
    base,
    emubase,
    text,
    trs80,
    vector,
    yaml,
    z80

  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -O2

  -- Note: RIO recommendations.
  default-extensions:
    CPP,
    BangPatterns,
    BinaryLiterals,
    ConstraintKinds,
    DataKinds,
    DefaultSignatures,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DoAndIfThenElse,
    EmptyDataDecls,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    GeneralizedNewtypeDeriving,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    OverloadedStrings,
    PartialTypeSignatures,
    PatternGuards,
    PolyKinds,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TupleSections,
    TypeSynonymInstances,
    ViewPatterns

executable trs80-disasm
  default-language:   Haskell2010
  main-is:            TRS80Disasm.hs
  Build-Depends:
    base,
    bytestring,
    emubase,
    text,
    trs80,
    vector,
    yaml,
    z80
  default-extensions:
    CPP,
    GADTs,
    OverloadedStrings


-- executable emuwork
--   default-language:     Haskell2010
--   hs-source-dirs:       src-main
--   main-is:              Main.hs
--   Build-Depends:
--     base,
--     containers,
--     bytestring,
--     deepseq,
--     lens,
--     vector,
--     trs80,
--     emubase,
--     z80

--   ghc-options:          -Wall -O2

--   default-extensions:
--     GADTs,
--     MultiParamTypeClasses,
--     OverloadedStrings,
--     TypeSynonymInstances,
--     FlexibleInstances