cabal-version:  3.6
name:           trs80
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       TRS-80 system emulator

description:    The venerable TRS-80 ("Trash 80")
license:        GPL-3.0-or-later

library
  default-language: Haskell2010

  build-depends:
    aeson,
    array,
    base,
    binary,
    bytestring,
    containers,
    emubase,
    generics-sop,
    hashable,
    json-sop,
    lens,
    microlens,
    pureMD5,
    scientific,
    text,
    transformers,
    unordered-containers,
    vector,
    yaml,
    z80

  ghc-options: -Wall -O2

  default-extensions:
    CPP,
    GADTs,
    OverloadedStrings

  exposed-modules:
    TRS80

  other-modules:
    TRS80.System
    TRS80.Disasm
    TRS80.CommonOptions
    TRS80.Disasm.Guidance

executable disasm-check
  default-language:   Haskell2010
  main-is:            TRS80/Executables/DisasmCheck.hs
  Build-Depends:
    aeson,
    base,
    containers,
    bytestring,
    deepseq,
    lens,
    scientific,
    vector,
    text,
    trs80,
    unordered-containers,
    yaml,
    emubase,
    z80
  other-modules:
    TRS80.Disasm.Guidance
  default-extensions:
    CPP,
    GADTs,
    OverloadedStrings

test-suite yamltest
    default-language:   Haskell2010
    Type:               exitcode-stdio-1.0
    Build-Depends:
        aeson,
        base,
        bytestring,
        Cabal,
        emubase,
        generics-sop,
        hashable,
        HUnit,
        json-sop,
        pureMD5,
        raw-strings-qq,
        scientific,
        text,
        unordered-containers,
        vector,
        yaml,
        z80
    Main-is:            TRS80/Disasm/YamlTest.hs
    Other-Modules:      TRS80.Disasm.Guidance
    default-extensions: GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances
