cabal-version:  3.6
name:           trs80
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       TRS-80 system emulator

description:    The venerable TRS-80 ("Trash 80")
license:        GPL-3.0-or-later

library
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    binary,
    bytestring,
    containers,
    emubase,
    microlens-platform,
    pureMD5,
    scientific,
    text,
    transformers,
    unordered-containers,
    vector,
    yaml,
    z80

  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -O2

  -- Note: RIO recommendations.
  default-extensions:
    CPP,
    BangPatterns,
    BinaryLiterals,
    ConstraintKinds,
    DataKinds,
    DefaultSignatures,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DoAndIfThenElse,
    EmptyDataDecls,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    GeneralizedNewtypeDeriving,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    OverloadedStrings,
    PartialTypeSignatures,
    PatternGuards,
    PolyKinds,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TupleSections,
    TypeSynonymInstances,
    ViewPatterns

  exposed-modules:
    TRS80

  other-modules:
    TRS80.System
    TRS80.Disasm
    -- Deprecated.
    -- TRS80.CommonOptions
    TRS80.Disasm.Guidance

test-suite yamltest
    default-language:   Haskell2010
    Type:               exitcode-stdio-1.0
    Build-Depends:
        aeson,
        base,
        bytestring,
        Cabal,
        emubase,
        generics-sop,
        hashable,
        HUnit,
        pureMD5,
        raw-strings-qq,
        scientific,
        text,
        unordered-containers,
        vector,
        yaml,
        z80
    Main-is:            TRS80/Disasm/YamlTest.hs
    Other-Modules:      TRS80.Disasm.Guidance
    default-extensions: GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TypeSynonymInstances,
                        FlexibleInstances
