cabal-version:  >= 1.12
name:           z80
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       Z80 processor emulation

description:
  Z80 processor emulator, inculding undocumented instructions.
license:        GPL-3

library
  default-language:     Haskell2010

  build-depends:
    base,
    IntervalMap,
    bytestring,
    comonad,
    containers,
    deepseq,
    directory,
    emubase,
    filepath,
    generics-sop,
    hashable,
    microlens,
    microlens-th,
    transformers,
    old-locale,
    parsec,
    primitive,
    psqueues,
    syb,
    text,
    time,
    uniplate,
    unordered-containers,
    vector

  -- cpp-options: -DTEST_DEBUG
  ghc-options: -Wall -O2

  default-extensions:
    CPP,
    GADTs,
    MultiParamTypeClasses,
    TypeSynonymInstances,
    RankNTypes,
    OverloadedStrings,
    BangPatterns,
    TemplateHaskell

  exposed-modules:
    Z80,

    Z80.InstructionSet,
    Z80.InsnDecode,
    Z80.InsnExecute,
    Z80.Processor,
    Z80.Disassembler,
    Z80.DisasmOutput,
    Z80.ParseAnalytic,
    Z80.System

test-suite z80inst
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Z80/Tests/Z80InstTest.hs
    -- cpp-options:        -DTEST_DEBUG
    ghc-options:        -Wall
    build-depends:
      base,
      random,
      Cabal,
      HUnit >= 1.2,
      QuickCheck >= 2,
      test-framework >= 0.8,
      test-framework-hunit >= 0.3,
      test-framework-quickcheck2 >= 0.3,
      IntervalMap,
      bytestring,
      comonad,
      containers,
      deepseq,
      directory,
      filepath,
      generics-sop,
      hashable,
      microlens,
      microlens-th,
      transformers,
      old-locale,
      parsec,
      primitive,
      psqueues,
      syb,
      text,
      time,
      uniplate,
      unordered-containers,
      vector
    default-extensions:
      CPP,
      GADTs,
      MultiParamTypeClasses,
      TypeSynonymInstances,
      RankNTypes,
      OverloadedStrings,
      BangPatterns,
      TemplateHaskell
    other-modules:
      Machine,
      Machine.Device,
      Machine.DisassemblerTypes,
      Machine.MemorySystem,
      Machine.NullProcessor,
      Machine.ProgramCounter,
      Machine.System,
      Machine.Utils,
      Z80,
      Z80.DisasmOutput,
      Z80.Disassembler,
      Z80.InsnDecode,
      Z80.InstructionSet,
      Z80.Processor,
      Z80.System
